# DPT-Data-Parser-Timeline

./: .gitignore  CMakeLists.txt  Makefile  README.md  clean-all.cmake  clean.sh  corrupted.yaml  icon.icns  pytest.ini  requirements.txt  test.txt  test.yaml  test_output.txt  treeRoot.txt  treeTest.txt
docs/: README.md  dpt-manual.html
src/: Commands.py  MainWindow.py  MusicItem.py  ParamDialog.py  RenameDialog.py  Settings.py  SettingsDialog.py  Timeline.py  TimelineContainer.py  TimelineRuler.py  TimelineView.py  TrackHeaderView.py  __init__.py  dmg_settings.py  main.py  newTimelineView.py  settings.json  setup.py
src/core/: MetadataValue.cpp  MetadataValue.hpp  YamlParser.cpp  YamlParser.hpp  YamlSerialization.cpp  YamlSerialization.hpp  YamlValidation.hpp
src/models/: music_clip.py
src/views/: music_clip_view.py
test/: ListValueTests.cpp  MetadataValueTests.cpp  NumericValueTests.cpp  StringValueTests.cpp  ValidationErrorTests.cpp  YamlParserTests.cpp  YamlSerializationTests.cpp  sezione1.yaml
tests/: README.md  __init__.py  base_test.py  test_advanced_file.py  test_commands.py  test_complex_Event_handling.py  test_complex_event.py  test_complex_ui.py  test_dialog_integration.py  test_dialogs.py  test_edge_cases.py  test_error_handling.py  test_file_operations.py  test_main_window.py  test_music_items.py  test_param_dialog.py  test_performance.py  test_performance_edge_case.py  test_recovery.py  test_rename_dialog.py  test_settings.py  test_settings_dialog.py  test_specific_behaviour.py  test_stress.py  test_timeline.py  test_timeline_container.py  test_timeline_core.py  test_timeline_ruler.py  test_timeline_view.py  test_track_header.py  test_ui_interaction.py  test_view_sync.py
tests/commands/: __init__.py  test_commands.py
tests/dialogs/: __init__.py  test_dialogs.py  test_param_dialog.py  test_rename_dialog.py
tests/integration/: __init__.py  test_complex_event.py  test_dialog_integration.py  test_event_handling_complex.py  test_file_operations_advanced.py  test_file_operations_basic.py  test_view_sync.py
tests/integration/fixtures/: test_file.yaml
tests/models/: test_music_clip.py
tests/performance/: __init__.py  test_performance.py  test_performance_edge_case.py
tests/settings/: __init__.py  test_settings.py  test_settings_dialog.py
tests/timeline/: __init__.py  test_music_items.py  test_timeline.py  test_timeline_container.py  test_timeline_core.py  test_timeline_edge_cases.py  test_timeline_error_handling.py  test_timeline_recovery.py  test_timeline_ruler.py  test_timeline_specific_behavior.py  test_timeline_stress.py  test_timeline_track_header.py  test_timeline_view.py
tests/ui/: __init__.py  test_complex_ui.py  test_main_window.py  test_ui_interaction.py
tests/views/: test_music_clip_view.py
